--- a/conversion_file.tex
+++ b/conversion_file.tex
@@ -1,4 +1,4 @@
-\documentclass[]{standalone} 
+\documentclass[border=2pt, draft]{standalone} 
 \usepackage{amsmath}
 \begin{document} 
 $\alpha \gamma$
